Updates to charts

--- a/.gitignore
+++ b/.gitignore
@@ -9982,3 +9982,4 @@ node_modules/ws/package.json
 node_modules/ws/README.md
 node_modules/ws/wrapper.mjs
 fiix_probe_workordertask_fields.mjs
+/node_modules
