Updates to test teams webhooks messages

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "CHERNE Assist",
-  "short_name": "Assist",
+  "short_name": "CHERNE Assist",
   "description": "Cherne Digital Andon & Maintenance System",
   "start_url": "/",
   "scope": "/",
